use visibility in css, separate file for jScroll, fix action sync for separate buttons

--- a/css/webpanel.css
+++ b/css/webpanel.css
@@ -600,10 +600,12 @@
     border: 1px solid #d8dce0;
     border-radius: 3px;
     height: 26px;
+    width: 62px;
     overflow: hidden;
     zoom: 1;
     cursor: pointer;
     display: inline-block;
+    visibility: hidden;
     white-space: nowrap;
     list-style: none;
     margin: 0;
@@ -615,16 +617,21 @@
     text-align: left;
     vertical-align: baseline;
 }
-.b_contact:hover .b_button_action[class*="m_button_action_"] {
-    display: inline-block;
+.b_button_action[class*="m_button_action_"] {
+    visibility: visible;
 }
-
 .l_panel .b_button_action {
     right: 20px;
     top: 5px;
-    display: none;
+    visibility: hidden;
     position: absolute;
     float: right;
+}
+.l_panel .b_contact .b_button_action[class*="m_button_action_"] {
+    visibility: hidden;
+}
+.l_panel .b_contact:hover .b_button_action[class*="m_button_action_"] {
+    visibility: visible;
 }
 .b_button_action.m_static {
     position: static !important;
